Memperbaiki smell code