@@ -5,7 +5,6 @@ import com.financetracker.model.TransactionType;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Implementasi Strategy: Laporan Harian.
@@ -21,10 +20,12 @@ public class DailyReportStrategy implements ReportStrategy {
         LocalDate today = LocalDate.now();
         List<Transaction> dailyTx = transactions.stream()
                 .filter(t -> t.getDate().equals(today))
-                .collect(Collectors.toList());
+                // Mengganti .collect(Collectors.toList()) dengan .toList()
+                .toList(); 
 
         if (dailyTx.isEmpty()) {
-            return "Tidak ada transaksi hari ini (" + today + ").";
+            // Mengganti \n dengan %n di pesan non-formatted string (opsional, tapi disarankan)
+            return "Tidak ada transaksi hari ini (" + today + ").%n";
         }
 
         double income = dailyTx.stream()
@@ -38,15 +39,23 @@ public class DailyReportStrategy implements ReportStrategy {
         double net = income - expense;
 
         StringBuilder report = new StringBuilder();
-        report.append(String.format("Laporan Harian (%s):\n", today));
-        report.append("----------------------------\n");
-        report.append(String.format("Total Pemasukan: Rp %,.2f\n", income));
-        report.append(String.format("Total Pengeluaran: Rp %,.2f\n", expense));
-        report.append(String.format("Total Bersih: Rp %,.2f\n\n", net));
-        report.append("Detail Transaksi:\n");
+        
+        // Menggabungkan Header Laporan dengan Text Block dan %n
+        report.append(String.format(
+            """
+            Laporan Harian (%s):%n
+            ----------------------------%n
+            Total Pemasukan: Rp %,.2f%n
+            Total Pengeluaran: Rp %,.2f%n
+            Total Bersih: Rp %,.2f%n%n
+            Detail Transaksi:%n
+            """,
+            today, income, expense, net
+        ));
 
         for (Transaction tx : dailyTx) {
-            report.append(String.format("- (%s) %s: Rp %,.2f\n",
+            // Mengganti \n dengan %n di dalam loop
+            report.append(String.format("- (%s) %s: Rp %,.2f%n",
                     tx.getCategory(), tx.getDescription(), tx.getAmount()));
         }
 
