@@ -26,7 +26,7 @@ public class MonthlyReportStrategy implements ReportStrategy {
 
         List<Transaction> monthlyTx = transactions.stream()
                 .filter(t -> t.getDate().getMonth() == currentMonth && t.getDate().getYear() == currentYear)
-                .collect(Collectors.toList());
+                .toList();
 
         if (monthlyTx.isEmpty()) {
             return "Tidak ada transaksi bulan ini (" + currentMonth + " " + currentYear + ").";
@@ -53,19 +53,24 @@ public class MonthlyReportStrategy implements ReportStrategy {
                 ));
 
         StringBuilder report = new StringBuilder();
-        report.append(String.format("Laporan Bulanan (%s %d):\n", currentMonth, currentYear));
-        report.append("----------------------------\n");
-        report.append(String.format("Total Pemasukan: Rp %,.2f\n", income));
-        report.append(String.format("Total Pengeluaran: Rp %,.2f\n", expense));
-        report.append(String.format("Total Bersih: Rp %,.2f\n\n", net));
-        report.append("Pengeluaran per Kategori:\n");
+        
+        // Header Laporan menggunakan Text Block dan %n
+        report.append(String.format(
+            """
+            Laporan Bulanan (%s %d):%n
+            ----------------------------%n
+            Total Pemasukan: Rp %,.2f%n
+            Total Pengeluaran: Rp %,.2f%n
+            Total Bersih: Rp %,.2f%n%n
+            Pengeluaran per Kategori:%n
+            """, 
+            currentMonth, currentYear, income, expense, net
+        ));
 
         expenseByCategory.entrySet().stream()
                 .sorted(Map.Entry.<String, Double>comparingByValue().reversed()) // Urutkan dari terbesar
-                .forEach(entry -> {
-                    report.append(String.format("- %s: Rp %,.2f\n", entry.getKey(), entry.getValue()));
-                });
+                .forEach(entry -> report.append(String.format("- %s: Rp %,.2f%n", entry.getKey(), entry.getValue())));
 
-        return report.toString();
+        return report.toString(); // Menggunakan toString() adalah default, toList() ada di tempat lain
     }
 }
